--- a/event/eventtest1/eventpage1.css
+++ b/event/eventtest1/eventpage1.css
@@ -26,7 +26,7 @@ margin-top: 15px;
     body {
       background-color: #e0e0e2;
       width: 100%;
-      height: auto;
+      height: 800px;
     }
     .page{
         width: 100vw;
@@ -72,7 +72,10 @@ margin-top: 15px;
         margin-top: 2vh;
         width:90vw;
         height:90vw;
-        background-color: #F1A208;
+        background-image: url("https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/lunar-cruiser-side-view.webp?alt=media&token=7c349047-da62-4511-94fb-6addf174fa64");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         border-radius: 10px;
 
     }
